version 1.0pre3
- improve accuracy of calculation of standard errors, and
  numerical accuracy on MS Windows in general
- fix more translation issues
- fix bug in normality chi-square test for large n
- fix bug that prevented CUSUM plot from displaying
- fix normality of residual test: print to model window was
  incomplete
- fix translation issue in LaTeX print of equation
- backport fix for impulse plot to gtk-1.2 version
- fix bug at exit of gretlcli with "quit" and no filename
- fies for bugs in gnumeric file reader
- fixes for Excel reader -- handle missing obs and Far East info
- fix for gretlcli under NLS: ensure that the translations come
  out in the local encoding, not utf-8
- remove Gtk 2.0 right click menu on text windows
- update translations and integrate the French translation

09/20/2002 version 1.0pre2 (pre1 was "for translators only")
- add range-mean graph option to GUI Variable menu, and
  as new command "rmplot"
- add retrievable variable $pd = data periodicity
- add min() and max() functions to the functions available 
  for use with the "genr" command
- add Least Absolute Deviations regression ("lad" command)
- fix bugs in saving output to named file, in both gretlcli and
  gui program
- fix bug in boxplots for languages other than English
- fix error in df in sample script ps4-2.inp
- fix translation of date strings in gretl output
- linux: move plugins to ${prefix}/lib/gretl
- gnome 2.0: use gconf apparatus
- gtk 2.0: fix remove/add toolbar breakage; change name of program
  back to "gretl" and "gretl_x11" (not "gretl2", "gretl2_x11")
- revamp and internationalize TeX and RTF printing functions
  including those for summary stats and correlation matrix
- make TeX format available for all model windows
- remove HTML print/copy options: can't maintain four formats
  with internationalization!

08/25/2002 version 0.999
- add support for gtk 2.0 and gnome 2.0
- enhanced gui with gtk 2.0