@@ -1,6 +1,8 @@
 version 1.0pre3
 - improve accuracy of calculation of standard errors, and
   numerical accuracy on MS Windows in general
+- make gretl databases installable in user directory as well as
+  system database directory
 - fix more translation issues
 - fix bug in normality chi-square test for large n
 - fix bug that prevented CUSUM plot from displaying
